fix: ajuste de contrato para application/json e error object
